// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders with default props 1`] = `
<span
  aria-label="badge-Apples"
  class="styled__Wrapper-sc-1n59qnd-0 cbqPwt"
  color="primary"
>
  Apples
</span>
`;

exports[`Badge renders with secondary color 1`] = `
<span
  aria-label="badge-Apples"
  class="styled__Wrapper-sc-1n59qnd-0 cUpfLf"
  color="secondary"
>
  Apples
</span>
`;
